syntax = "proto3";

package NFilePb;

message FileInfo {
  string FileId = 1;
  string Hash = 2;
}

message FileData  {
  bytes Buffer = 1;
}

service NFileService {
  //文件上传
  rpc FileUpload(stream FileData)returns(FileInfo){}
  //文件下载
  rpc FileDownload(FileInfo)returns (stream FileData){}
}